# nexusfeed

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.worker  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-training.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  load-test.yml  training.yml
infra/kubernetes/: api-deployment.yaml  canary-rollout.yaml  configmap.yaml  hpa.yaml  worker-deployment.yaml
infra/monitoring/: alert_rules.yml  prometheus.yml
infra/terraform/: main.tf  variables.tf
nexusfeed/: __init__.py  config.py  exceptions.py  types.py
nexusfeed/api/: main.py
nexusfeed/baselines/: benchmark_runner.py  collaborative_filtering.py  popularity_baseline.py  random_baseline.py
nexusfeed/db/: connection.py  models.py
nexusfeed/experiments/: bandit.py  bucketing.py  experiment_manager.py  metrics_tracker.py  significance.py
nexusfeed/explainability/: shap_explainer.py
nexusfeed/features/: feature_pipeline.py  feature_registry.py  item_features.py  offline_store.py  online_store.py  user_features.py
nexusfeed/ingestion/: event_router.py  event_validator.py  kafka_consumer.py  kafka_producer.py
nexusfeed/models/: evaluate.py  item_tower.py  model_registry.py  online_learning.py  (+4 more)
scripts/: demo.py  generate_synthetic_data.py  run_benchmark.py  seed_faiss_index.py
tests/: conftest.py
training/: data_loader.py  hyperparameter_tuning.py  negative_sampling.py  sagemaker_job.py  trainer.py
(+53 files in other folders)
